# bootstrap-dashboard-rs

./: Cargo.toml  LICENSE.md  README.md
examples/: active_link_deduction.rs  example.rs  htmx_alerts.rs  login_form.rs  no-top-or-bottom.rs
src/: alerts.rs  card.rs  color.rs  error.rs  favicons.rs  files.rs  fontawesome.rs  grid.rs  htmx.rs  icons.rs  lib.rs  links.rs  login.rs  modal.rs  page_header.rs  sidebar.rs  userinfo.rs
static/css/: googlefonts-nunito.css
templates/: alertlist.html  alerts.html  card.html  column.html  dashboard.html  dynamic.html  error.html  googlefonts-nunito.css  login.html  modal.html  page.html  page_header.html  row.html  sidebar.html  signup.html  unauth_nav.html  userinfo.html
