[package]
name = "bootstrap-dashboard"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.0" }
include_dir = { version = "0.7.3" }
axum = { version = "0.7.5", optional = true }
mime_guess = { version = "2.0.4", optional = true }
askama_axum = { version = "0.4.0", optional = true }

[features]
default = ["axum"]
axum = ["dep:axum", "dep:mime_guess", "dep:askama_axum"]

[dev-dependencies]
axum = { features = ["original-uri"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing-subscriber = "0.3.17"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
axum-htmx = "*"
